--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "mikko-server",
-  "version": "1.0.0",
-  "description": "Takes in text over HTTP and plays it on the host machine using mikko TTS",
-  "main": "index.js",
+  "name": "mikko-server-partyline",
+  "version": "0.1.0",
+  "description": "Takes in text over HTTP and plays it on to other people using the web site",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clear-cache": "rm ./tmp/*.mp3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RauliL/mikko-server.git"
+    "url": "git+https://github.com/RauliL/mikko-server-partyline.git"
   },
   "author": "Rauli Laine <rauli.laine@iki.fi> (https://raulil.github.io/)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/RauliL/mikko-server/issues"
+    "url": "https://github.com/RauliL/mikko-server-partyline/issues"
   },
-  "homepage": "https://github.com/RauliL/mikko-server#readme",
+  "homepage": "https://github.com/RauliL/mikko-server-partyline#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
     "build-url": "^1.0.10",
     "express": "^4.16.2",
-    "lame": "^1.2.4",
     "md5": "^2.2.1",
-    "pug": "^2.0.1",
-    "request": "^2.85.0",
-    "speaker": "^0.4.0",
-    "winston": "^2.4.1"
+    "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "socket.io": "^2.1.1",
+    "uuid": "^3.3.2",
+    "winston": "^3.0.0"
   }
 }
