--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "@babel/core": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "babel-loader": "^8.0.0-beta.4",
-    "build-url": "^1.0.10",
     "bulma": "^0.7.1",
     "css-loader": "^1.0.0",
     "express": "^4.16.2",
     "lodash": "^4.17.10",
-    "md5": "^2.2.1",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
+    "oddcast-tts-demo": "^1.0.0",
     "pug": "^2.0.3",
     "redom": "^3.12.7",
     "request": "^2.88.0",
