--- a/package.json
+++ b/package.json
@@ -22,25 +22,27 @@
   },
   "homepage": "https://github.com/RauliL/mikko-server-partyline#readme",
   "dependencies": {
+    "express": "^4.16.2",
+    "lodash": "^4.17.10",
+    "oddcast-tts-demo": "^1.0.0",
+    "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "socket.io": "^2.1.1",
+    "uuid": "^3.3.2",
+    "winston": "^3.0.0"
+  },
+  "devDependencies": {
     "@babel/core": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "babel-loader": "^8.0.0-beta.4",
     "bulma": "^0.7.1",
     "css-loader": "^1.0.0",
-    "express": "^4.16.2",
-    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
-    "oddcast-tts-demo": "^1.0.0",
-    "pug": "^2.0.3",
     "redom": "^3.12.7",
-    "request": "^2.88.0",
     "sass-loader": "^7.1.0",
-    "socket.io": "^2.1.1",
     "style-loader": "^0.22.1",
-    "uuid": "^3.3.2",
     "webpack": "^4.16.5",
-    "webpack-command": "^0.4.1",
-    "winston": "^3.0.0"
+    "webpack-command": "^0.4.1"
   }
 }
